--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "^0.66.1",
     "react-native-dropdown-picker": "^5.2.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-router-native": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
