--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.0",
+    "@react-native-picker/picker": "2.1.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.66.1",
-    "react-native-dropdown-picker": "^5.2.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-web": "0.17.1",
     "react-router-native": "^5.2.1"
   },
