--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-native": "^0.66.1",
     "react-native-picker-select": "^8.0.4",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-router-native": "^5.2.1"
   },
