--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.66.1",
+    "react-native-maps": "0.28.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
