--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.0",
+    "@react-native-community/checkbox": "^0.5.9",
     "@react-native-picker/picker": "2.1.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.66.1",
+    "react-native-calendars": "^1.1268.0",
+    "react-native-elements": "^3.4.2",
     "react-native-maps": "0.28.0",
     "react-native-picker-select": "^8.0.4",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-router-native": "^5.2.1"
