--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "^0.66.1",
+    "react-native": "0.64.2",
     "react-native-calendars": "^1.1268.0",
     "react-native-elements": "^3.4.2",
     "react-native-maps": "0.28.0",
