--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "schoolync",
     "slug": "schoolync",
     "version": "1.0.0",
+    "android.config.googleMaps.apiKey": "AIzaSyAEjvtIWPMH5ru26LtCo0ai6lH6aZ9QGuc",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -13,9 +14,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.sajios289.schoolync"
