--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-maps": "0.28.0",
     "react-native-maps-directions": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
+    "react-native-radio-buttons-group": "^2.2.7",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
