--- a/app.json
+++ b/app.json
@@ -3,7 +3,6 @@
     "name": "schoolync",
     "slug": "schoolync",
     "version": "1.0.0",
-    "android.config.googleMaps.apiKey": "AIzaSyAEjvtIWPMH5ru26LtCo0ai6lH6aZ9QGuc",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -24,7 +23,12 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.sajios289.schoolync"
+      "package": "com.sajios289.schoolync",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAEjvtIWPMH5ru26LtCo0ai6lH6aZ9QGuc"
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
