--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-picker/picker": "2.1.0",
     "expo": "~43.0.0",
@@ -20,6 +21,7 @@
     "react-native": "0.64.2",
     "react-native-calendars": "^1.1268.0",
     "react-native-elements": "^3.4.2",
+    "react-native-geocoding": "^0.5.0",
     "react-native-maps": "0.28.0",
     "react-native-maps-directions": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
