--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-picker/picker": "2.1.0",
     "expo": "~43.0.0",
+    "expo-constants": "~12.1.3",
     "expo-location": "~13.0.4",
+    "expo-notifications": "~0.13.3",
     "expo-status-bar": "~1.1.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
