:construction: Implementing Firebase Realtime DB

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@expo-google-fonts/nunito": "^0.2.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/checkbox": "^0.5.9",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/database": "^13.0.1",
     "@react-native-picker/picker": "2.1.0",
     "expo": "~43.0.0",
     "expo-constants": "~12.1.3",
