--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -12,7 +11,9 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/crashlytics": "^13.0.1",
     "@react-native-firebase/database": "^13.0.1",
+    "@react-native-firebase/perf": "^13.0.1",
     "@react-native-picker/picker": "2.1.0",
     "expo": "~43.0.0",
     "expo-constants": "~12.1.3",
@@ -22,7 +23,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "0.64.3",
     "react-native-calendars": "^1.1268.0",
     "react-native-elements": "^3.4.2",
     "react-native-geocoding": "^0.5.0",
@@ -33,10 +34,17 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "react-router-native": "^5.2.1"
+    "react-router-native": "^5.2.1",
+    "expo-splash-screen": "~0.13.5",
+    "expo-updates": "~0.10.13",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-screens": "~3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "name": "schoolync",
+  "version": "1.0.0"
 }
