--- a/package.json
+++ b/package.json
@@ -19,27 +19,28 @@
     "expo-constants": "~12.1.3",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
+    "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1268.0",
+    "react-native-collapsible": "^1.6.0",
     "react-native-elements": "^3.4.2",
     "react-native-geocoding": "^0.5.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.28.0",
     "react-native-maps-directions": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-radio-buttons-group": "^2.2.7",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "react-router-native": "^5.2.1",
-    "expo-splash-screen": "~0.13.5",
-    "expo-updates": "~0.10.13",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.8.0"
+    "react-router-native": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
