--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-picker/picker": "2.1.0",
     "expo": "~43.0.0",
     "expo-constants": "~12.1.3",
+    "expo-linear-gradient": "~10.0.3",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
     "expo-splash-screen": "~0.13.5",
